2008-05-19  Guillem Jover  <guillem@debian.org>

	* scripts/Dpkg/Source/Package.pm ($diff_ignore_default_regexp): Add
	'.be'.
	(@tar_ignore_default_pattern): Likewise.

2008-05-12  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gencontrol.pl ($package_type): Rename to ...
	($pkg_type): ... this, for uniformity.

2008-05-12  Guillem Jover  <guillem@debian.org>

	* src/help.c (do_script): Expand 'maint' to 'maintainer' in string.
	(vmaintainer_script_installed): Mark string for translation. Change
	strings so that they get merged by gettext with similar ones.
	(maintainer_script_new): Likewise.

2008-05-12  Guillem Jover  <guillem@debian.org>

	* lib/dpkg-priv.h (sizeof_array): New macro.
	* lib/parse.c: Include <dpkg-priv.h>.
	(NFIELDS): Remove macro.
	(nfields): Use sizeof_array instead of NFIELDS.
	(parsedb): Likewise.
	* lib/subproc.c (NCATCHSIGNALS): Remove macro.
	(uncatch_signals): Use sizeof_array instead of NCATCHSIGNALS.
	(setup_subproc_signals): Likewise.
	(cu_subproc_signals): Likewise.

2008-05-12  Guillem Jover  <guillem@debian.org>

	* dselect/method.cc: Include <dpkg-priv.h>. Use setup_subproc_signals
	and cu_subproc_signals instead of cu_restoresignals and duped code
	in falliblesubprocess.
	* lib/Makefile.am (libdpkg_a_SOURCES): Add 'subproc.c'.
	* ib/dpkg-priv.h (setup_subproc_signals): New prototype.
	(cu_subproc_signals): Likewise.
	* src/help.c: Include <dpkg-priv.h> and stop including <signal.h>.
	(cu_restorescriptsignals, script_catchsignals): Move to ...
	* lib/subproc.c (cu_subproc_signals, setup_subproc_signals): ... here.
	New file.

2008-05-12  Guillem Jover  <guillem@debian.org>

	* lib/Makefile.am (libdpkg_a_SOURCES): Add 'dpkg-priv.h' and 'path.c'.
	* lib/dpkg-priv.h: New file.
	* lib/path.c: Likewise.

2008-05-11  Pierre Habouzit  <madcoder@debian.org>

	* lib/showpkg.c (show1package): Use %zd instead of %d in sprintf()
	call with a size_t parameter.

2008-05-11  Pierre Habouzit  <madcoder@debian.org>
