@@ -108,6 +108,7 @@ Marcel Toele <mtoele@kern.nl>
 Marco d'Itri <md@linux.it>
 Marcus Brinkmann <brinkmd@debian.org> 
 Mark Rosenstand <mark@borkware.net>
+Martin Koeppe <mkoeppe@gmx.de>
 Masato Taruishi <taru@debian.or.jp>
 Mathias Weidner <mathias@weidner.in-bad-schmiedeberg.de>
 Matt Kraai <kraai@ftbfs.org>
