@@ -7,6 +7,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Mark and coalesce similar strings for translation.
   * Add '.be' to the default dpkg-source -i regex. Closes: #481716
     Based on a patch by Ben Finney.
+  * Fix link order when using libcompat.a and libintl.a by placing them after
+    libdpkg.a. Based on a patch by Martin Koeppe. Closes: #481805
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
