@@ -1,3 +1,14 @@
+2008-05-19  Martin Koeppe  <mkoeppe@gmx.de>,
+            Guillem Jover  <guillem@debian.org>
+
+	* dpkg-deb/Makefile.am (dpkg_deb_LDADD): Move 'libcompat.a' and
+	'$(LIBINTL)' after 'libdpkg.a'.
+	* dpkg-split/Makefile.am (dpkg_split_LDADD): Likewise.
+	* dselect/Makefile.am (dselect_LDADD): Likewise.
+	* /src/Makefile.am (dpkg_LDADD): Likewise.
+	(dpkg_query_LDADD): Likewise.
+	(dpkg_trigger_LDADD): Likewise.
+
 2008-05-19  Guillem Jover  <guillem@debian.org>
 
 	* scripts/Dpkg/Source/Package.pm ($diff_ignore_default_regexp): Add
